# shttpd

./: .gitignore  Cargo.toml  Makefile  README.md  rustc-ice-2025-02-13T09_22_16-164505.txt  rustc-ice-2025-05-03T12_01_28-27479.txt  rustc-ice-2025-05-03T12_38_40-30990.txt  rustc-ice-2025-05-03T12_38_56-31018.txt  rustc-ice-2025-05-03T12_39_07-31051.txt  rustc-ice-2025-05-03T12_39_14-31082.txt  rustc-ice-2025-05-03T12_39_21-31112.txt  rustc-ice-2025-05-03T12_41_19-31157.txt  rustc-ice-2025-05-03T12_41_22-31188.txt  rustc-ice-2025-05-03T14_17_27-31802.txt  rustc-ice-2025-05-03T14_17_31-31830.txt  rustc-ice-2025-05-03T14_17_32-31853.txt  rustc-ice-2025-05-03T14_17_35-31881.txt  rustc-ice-2025-05-03T14_23_23-31931.txt  rustc-ice-2025-05-03T14_23_25-31955.txt  rustc-ice-2025-05-03T14_23_31-31982.txt  rustc-ice-2025-05-03T14_23_33-32009.txt  rustc-ice-2025-05-03T14_23_37-32037.txt  rustc-ice-2025-05-03T14_23_40-32067.txt  rustc-ice-2025-05-03T14_23_50-32095.txt  rustc-ice-2025-05-03T14_24_02-32121.txt  rustc-ice-2025-05-03T14_24_06-32149.txt  rustc-ice-2025-05-03T14_24_32-32175.txt  rustc-ice-2025-05-03T14_24_36-32202.txt  rustc-ice-2025-05-03T14_24_38-32226.txt  rustc-ice-2025-05-03T14_24_41-32248.txt  rustc-ice-2025-05-03T14_25_15-32280.txt  rustc-ice-2025-05-03T14_26_19-33434.txt  rustc-ice-2025-05-03T14_26_35-33457.txt  rustc-ice-2025-05-03T14_26_37-33484.txt  rustc-ice-2025-05-03T14_26_52-33517.txt  rustc-ice-2025-05-03T14_26_54-33535.txt  rustc-ice-2025-05-03T14_26_56-33558.txt  rustc-ice-2025-05-03T14_27_02-33589.txt  rustc-ice-2025-05-03T14_27_27-33625.txt  rustc-ice-2025-05-03T14_27_43-33664.txt  (+679 more)
examples/example-1/: Shttpd.toml  chunked_data.txt  index.html  log4rs.yaml
examples/example-1/cgi/: guess-num  print-hi
examples/example-1/persist/guess-num/: 1.txt
scripts/: setcap_batch.sh
src/: be.rs  conf.rs  lib.rs  main.rs  req.rs  resp.rs  route.rs  worker.rs
src/application/: charset.rs  mime.rs  mod.rs
src/application/http/: mod.rs  parsing.rs  request.rs  response.rs  uri.rs  writing.rs
src/datalink/: arp.rs  mod.rs
src/network/: icmp.rs  ip.rs  mod.rs
src/transport/: tcp.rs  udp.rs
