[package]
name = "shttpd"
version = "0.1.0"
edition = "2024"
description = ""
authors = [ "minghu6 <a19678zy@163.com>" ]

[dependencies]

# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# http
osimodel = { path = "../osimodel", features = ["http"]}
cookie = "0.18"
chrono = "0.4"
qstring = "0.7.2"
# http.encode/decode
# gzip, deflate
flate2 = { version = "1.0" }
# br
brotli = { version = "7" }

# log
log = "0.4"
log4rs = { version = "1.3", features = ["background_rotation"] }

# config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
m6ptr = { path = "../m6coll/m6ptr" }
m6io = { path = "../m6coll/m6io", features = ["cow", "bstr"] }

# async
futures = { version = "0.3", features = ["thread-pool", "executor"] }


[dev-dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
